static/style.css
@media print {
  #mast,#footer,#footmenu {
    display: none;
  }
  @page {
    body {
      size: auto;
      margin: 1in;
    }
  }
  a {
    text-decoration: none;
    color: black;
  }
  .didactic ul {
    padding: 0 2em;
  }
  .didactic li ul li { 
    margin: 0.5em 0; 
  }
  .dicactic li {
    page-break-inside: avoid;
  }
  .didactic img {
    align: left;
    margin: 1em;  
  }
}
@media screen {
  body, #masthead a {
   color: #98761d; 
/*   color: #ad821d; */
  }
  body {
    background: #000;;
  }
  #mast {
    background: #172707;
  }
  a,hr {
    color: #6b6231;
    font-weight: bold;
  }
  #logo {
    height: 3em;
  }
  #content,#overlay {
    background: #2e1a07;
  }
  code {
    background: #224;
  }
}

body {
    font-size: 14pt;
    margin: 1% 2%;
}
a {
  text-decoration: none;
  font-style: normal;
}
h1 {
  font-size: 125%;
}
h2 {
  margin-top: 0;
  text-align: center;
}
h3 {
  font-size: 110%;
}
address {
  margin: 1em 0;
}
code {
  margin-left: 2em;
  width: 50%;
  display: block;
  padding: .5em;
  margin: 1em;
  border-radius: 3px;

}

#mast {
  max-width: 60em;
  border-radius: 30px 30px 0 0;
  margin: 0  auto;
  padding: 1em 3em;
  text-align: center;
}
#masthead {
  max-width: 15em;
  display: flex;
  justify-content: center;
  align-content: center;
  height: 3em;
  margin: .2em auto;
  font-size: 250%;
}
#mastlabel {
  margin: 0.1em auto;
  align-self: center;
}
#mastlogo {
  margin: 0.1em auto;
}
#mastmenu {
   clear: both;
}
#mastmenu hr{
    width: 50vw;
}
ul.menu {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0;

}.menu li {
  list-style-type: none;
  font-size: 110%;
  margin: 0 1em;
}
.menu.secondmenu li {
    font-size: inherit;
}
.menu {
  text-align: center;
  margin: 0 auto;
}


#content {
  max-width: 60em;
  padding: 1em 3em;
  border-radius: 0 0 30px 30px;
  margin: auto;
}
#footmenu {
  text-align: center;
}
#footer {
  max-width: 75%;
  margin: 0 auto;
  text-align: center;
}
#footer address{
  display: inline;
}
#footer address a {
  display: inline-block;
  margin: 0.3em 2em;
}


.main {
  margin: 0 1em;  
}
.price {
  font-weight: bold;
}
.dateline {
  font-style: italic;
  font-size: 80%;
}


.storytime {
  width: 90%
  max-width: 30em;
  padding: auto;
  margin: 0;
}
.storytime p {
  max-width: 40em;
  margin: auto;
  text-align: center;
}
.storytime img {
  align: center;
  max-width: 100%;
  max-height: 70vh;
  margin: 1em auto;
  display: block;
  padding-top: .2em;
  padding-bottom: 2em;
}
.storytime img::before {
  content "\a";
  white-space: pre;
}

.didactic {
  max-width: 40em;
  margin: 1em auto;;
  font-size: 110%;
}
p.didactic,didactic .p  {
    margin-bottom: 1em;
}
.didactic img {
  max-width: 90%;
  padding: 1em;
  align: center;
}
.didactic img.tinyfloat {
    max-width: 20%;
    min-width: 150px;
    padding: 1em;
    float: right;
}
.didactic dt {
  font-weight: bold;
  margin: 0 1em;
}
.didactic dd {
  margin: 0 0 1em 2em;
}
.didactic ul {
  list-style-type: none;
  padding: 0.5em 0;
}
.didactic ul li {
  padding: 0.2em 0;
}

.slideshow{
  font-weight: bold;
  text-align: center;
  align: center;
  padding-bottom: 1em;
  margin: 2%;
  display: block;
}
.slideshow .name {
  font-size: 115%;
  padding: 1em;
}
.slideshow .detail {
  margin: 0;
  display: inline-block;
  padding: 1% 1%;
}
.slideshow .photos {
  display: block;
  align: center;
}
.slideshow .caption {
  margin: auto;
  text-align: center;
  max-width: 60%;
}
.slideshow .pic{
  display: inline-block;
}
.slideshow img {
  display: inline-block;
  max-height: 50vh;
  max-width: 60vw;
  padding: 0.3em;
}
.slideshow.clear .detail {
  width:95%;
  padding: 1em;
}
.slideshow.clear img {
  max-height: 40vh;
}
.slideshow.float {
  padding: 1em 10vw;
}

.db {
  margin: auto;
  padding: 1em;
}
.db h4 {
  width: 20em;
  padding-top: 1em;
  margin: auto;
  float: left;
}
.db input.collapsor {
  float: right;
}
.collapsor + .db {
    display: none;
}
.collapsor:checked + .db {
    display: block;
}
.db form {
  max-width: 40em;
  margin: auto;
}
.db table {
  width: 100%;
  max-width: 40em;
  margin: auto;
  border: 2px solid white;
}
.db th {
  padding: 0.5em;
  text-align: left;
}
.db td {
  padding: 0 0.5em 0 1em;
}
.db th.Component {
  min-width:14em;
}
.db .int {
  width: 2em;
}
.db .usd {
  max-width: 4em;
  text-align: right;
}
.db .int input {
  width: 2em;
  text-align: right;
}
.db .usd input {
  width: 4em;
  text-align: right;
}
.db tfoot td {
  padding-top: 0.5em;
  border-top: 1px solid #ca3;
  font-weight: bold;
}
.submit {
  margin: auto;
  max-width: 50em;
}

